resolving hidden overflow issue w/ mobile phones

--- a/app/assets/stylesheets/app_bootstrap.css.scss
+++ b/app/assets/stylesheets/app_bootstrap.css.scss
@@ -30,10 +30,9 @@ p {
 html, body {
   margin: auto auto;
   width: 100%;
-  height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  overflow: hidden;
   font-family: 'Open Sans','Segoe UI','Helvetica','Arial', sans-serif;
 }
 
